test/equality/negative/comp_wrong_args.mli
val f : int -> string -> int
(*@ comparison *)
